# Multi_Auth_Django

./: .README.md.swp  README.md  django_ap_db.sql  django_db.sql
AP_Server/: db.sqlite3  manage.py
AP_Server/AP_Server/: asgi.py  settings.py  timing_middleware.py  urls.py  wsgi.py
AP_Server/cert/: AP_PKI.crt  AP_PKI.key
AP_Server/commonutils/: KGC.py  accumulator.py  switch_interface.py  utils.py
AP_Server/entitymanage/: add_data.json  apps.py  models.py  tests.py  urls.py  views.py
AP_Server/entitymanage/migrations/: 0001_initial.py  0002_publicparamterstable_entityinfo_software_hash.py  0003_remove_entityinfo_entity_port_and_more.py  0004_publicparamterstable_domain_id.py
AS_Server/AS_Server/: accumulator.json  manage.py
AS_Server/AS_Server/AS_Server/: asgi.py  settings.py  urls.py  wsgi.py
AS_Server/AS_Server/cert/: AS_PKI.crt  AS_PKI.key  CA.crt
AS_Server/AS_Server/commonutils/: PKI.py  __init__.py  accumulator.py  kgc.py  switch_interface.py  utils.py
AS_Server/AS_Server/ddsmanage/: apps.py  models.py  urls.py  views.py
AS_Server/AS_Server/ddsmanage/migrations/: 0001_initial.py  0002_packetid_ddsinfotable_destination_mac_and_more.py  0003_ddsinfotable_protocol_type.py
AS_Server/AS_Server/domainmanage/: apps.py  models.py  urls.py  views.py
AS_Server/AS_Server/domainmanage/migrations/: 0001_initial.py
AS_Server/AS_Server/entitymanage/: models.py  urls.py  views.py
AS_Server/AS_Server/entitymanage/migrations/: 0001_initial.py  0002_kgcparamtertable.py  0003_remove_kgcparamtertable_id_and_more.py  0004_remove_enitytable_entity_port_and_more.py  0005_enitytable_software_name.py
AS_Server/AS_Server/nodemanage/: apps.py  models.py  urls.py  views.py
AS_Server/AS_Server/nodemanage/migrations/: 0001_initial.py  0002_nodetable_node_port.py  0003_nodetable_node_is_alive_alter_nodetable_node_ip.py
AS_Server/AS_Server/softwaremanage/: apps.py  models.py  urls.py  views.py
AS_Server/AS_Server/softwaremanage/migrations/: 0001_initial.py  0002_registersoftwarelocationtable_registersoftwaretable_and_more.py  0003_alter_registersoftwarelocationtable_entity_ip_and_more.py  0004_alter_softwaretable_software_hash.py
AS_Server/AS_Server/usermanage/: models.py  mymiddleware.py  urls.py  views.py
AS_Server/AS_Server/usermanage/migrations/: 0001_initial.py
CLS_Code/: cls_lib.cpp  common_utils.cpp  tcp_socket.cpp
CLS_Code/include/: common_utils.h  tcp_socket.h
Pro_Pairfree/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  base_thread.cpp  cls_lib.cpp  cmake_install.cmake  crypto_utils.cpp  data_buffer.cpp  ddsinfo_test.cpp  open_port_test.cpp  process_parifree.cpp  server_socket.cpp  tcp_socket.cpp  test.cpp
Pro_Pairfree/backup/: cls_lib_back.cpp  data_buffer.cpp  data_buffer.h  sign_verify_test.cpp
Pro_Pairfree/include/: base_thread.h  cls_lib.h  crypto_utils.h  data_buffer.h  process_parifree.h  server_socket.h  tcp_socket.h  utils.h
Pro_Pairfree/test/: cls_lib_test.cpp  config.cpp  crypto_test.cpp  crypto_test_result.json  open_port_test.cpp  process_config.json  test.cpp
Process/: a.out  acc_test  acc_test.cpp  client_http  client_http.cpp  client_socket  client_socket.cpp  comm_test  comm_test.cpp  crypto_utils.cpp  crypto_utils.h  kgc_parifree.cpp  kgc_parifree.h  post_test.py  process_parifree.cpp  process_parifree.h  server  server.cpp  test  test.cpp  test_code.cpp  utils.h
SwithcInterface/: CA.key  CA.py  switch_interface.py  test.py
epoll_test/: epoll_utils.h  main_test.cpp  tcp_socket.h  test
process_project/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  comm_parifree.h  comm_utils.h  crypto_test.cpp  crypto_utils.h  process_parifree.cpp  setting.json  test  test.cpp
process_project/Test/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  gtest_result_backup.txt
process_project/Test/other/: calculate_md5.py  comm_utils.cpp  listening_process.cpp  sending_process.cpp  test.cpp
process_project/include/: comm_parifree.h  crypto_utils.cpp  process_parifree.cpp  process_parifree.h  test  test.cpp  test2  test3  utils.cpp  utils.h
selenium_test/: README.md  admin_test.py  config.py  editor_test.py  entity_manage.py  key_update_test.py  key_update_test.txt  key_update_test_ae1.txt  key_update_test_ae2.txt  key_update_test_ae3.txt  key_update_test_ae4.txt  key_update_test_ae5.txt  key_update_test_ap.txt  key_update_test_as.txt  node_manage.py  performance_test.py  performance_test_5.txt  performance_test_result.txt  requirements.txt  software_manage.py  test.py  user_manage.py
selenium_test/apachebench/: request_software_manage.json  request_software_manage_c10.txt  request_software_manage_c100.txt  request_software_manage_c1000.txt  request_software_register_c10.txt  request_software_register_c100.txt  request_software_register_c1000.txt  request_software_register_c500.txt
